<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/fabOverflow"
        android:scrollbars="none">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin2x">

            <android.support.constraint.Guideline
                android:id="@+id/guideline1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <!-- Name -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/guideline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin2x"
                android:layout_marginStart="@dimen/margin2x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textCapSentences"
                    tools:text="Lee Big Stopper" />
            </android.support.design.widget.TextInputLayout>
            <!-- /Name -->

            <!-- Info -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/guideline3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin2x"
                android:layout_marginStart="@dimen/margin2x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline">

                <EditText
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_info"
                    android:inputType="textMultiLine|textCapSentences"
                    tools:text="measured ~ND3.0" />
            </android.support.design.widget.TextInputLayout>
            <!-- /Info -->

            <!-- Text: Properties -->
            <TextView
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin2x"
                android:layout_marginTop="@dimen/margin3x"
                android:text="@string/hint_properties"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline3" />
            <!-- /Text: Properties -->

            <!-- Factor -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/guideline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin2x"
                android:layout_marginTop="@dimen/margin2x"
                app:layout_constraintEnd_toStartOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline4">

                <EditText
                    android:id="@+id/factor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_factor"
                    android:inputType="number"
                    tools:text="1024" />
            </android.support.design.widget.TextInputLayout>
            <!-- /Factor -->

            <!-- Stops -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/guideline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin2x"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toEndOf="@id/guideline5"
                app:layout_constraintTop_toBottomOf="@id/guideline4">

                <EditText
                    android:id="@+id/f_stops"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_stops"
                    android:inputType="numberDecimal"
                    tools:text="10" />
            </android.support.design.widget.TextInputLayout>
            <!-- /Stops -->

            <!-- ND -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/guideline7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin2x"
                android:layout_marginTop="@dimen/margin2x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline6"
                app:layout_constraintTop_toBottomOf="@id/guideline4">

                <EditText
                    android:id="@+id/nd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/hint_nd"
                    android:inputType="numberDecimal"
                    tools:text="3.0" />
            </android.support.design.widget.TextInputLayout>
            <!-- /ND -->

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <!-- delete -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin2x"
        android:src="@drawable/ic_delete_forever_white_24dp"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_red_light"
        app:fabSize="normal"
        app:layout_anchor="@id/scrollView"
        app:layout_anchorGravity="bottom|right|end"
        tools:visibility="visible" />
    <!-- /delete -->

</android.support.design.widget.CoordinatorLayout>
